test/tests/stages/14_pointers/invalid_types/extra_credit/compound_assignment_not_lval.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(100)
  ;
  int
  *
  identifier(ptr)
  =
  &
  (
  identifier(i)
  +=
  const int(200)
  )
  ;
  return
  const int(0)
  ;
  }
